<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="com.persi.eatery.Register">

    <ImageButton
        android:id="@+id/cancelRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="cancelRegistration"
        app:srcCompat="@android:drawable/ic_delete" />

    <TextView
        android:id="@+id/Sign_up_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/sign_up_with_email"
        android:textAlignment="viewStart"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:text="@string/sign_up_with_email" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/promt_name"
            android:inputType="textPersonName"
            android:textColor="@android:color/background_dark" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/promt_email"
            android:inputType="textWebEmailAddress"
            android:textColor="@android:color/background_dark" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/hostel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/promt_hostel"
            android:inputType="text"
            android:textColor="@android:color/background_dark" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/promt_room"
            android:inputType="number"
            android:textColor="@android:color/background_dark" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_ph_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/promt_phone_number"
            android:inputType="number"
            android:textColor="@android:color/background_dark" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/promt_password"
            android:inputType="textPassword"
            android:textColor="@android:color/background_dark" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/promt_confirm_password"
            android:imeActionId="15"
            android:inputType="textPassword"
            android:textColor="@android:color/background_dark" />

        <Button
            android:id="@+id/sign_up"
            style="?android:attr/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#FF27AE60"
            android:onClick="signUp"
            android:text="@string/sign_up"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="@string/sign_up" />

    </android.support.design.widget.TextInputLayout>

</LinearLayout>
