<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_eatery_home"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context="com.persi.eatery.Login_Activity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/promt_email"
            android:inputType="textWebEmailAddress"
            android:textColor="@android:color/background_dark" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/promt_password"
                android:imeActionId="15"
                android:inputType="textWebPassword"
                android:textColor="@android:color/background_dark" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#FF27AE60"
            android:onClick="signInExistingUser"
            android:text="@string/login_button"
            android:textColor="@android:color/background_light"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/login_button" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/white"
            android:onClick="registerNewUser"
            android:text="@string/register_button"
            android:textColor="#FF27AE60"
            android:textSize="15sp"
            tools:text="@string/register_button" />
    </android.support.design.widget.TextInputLayout>

</LinearLayout>