<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutx"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.persi.eatery.AccountActivity">


    <TextView
        android:id="@+id/hotel_name"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/deliverin_food_to"
        android:textColor="@android:color/background_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/deliverin_food_to" />


    <TextView
        android:id="@+id/restaurant_listView"
        android:layout_width="206dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:text="@string/customer_name"
        android:textColor="@android:color/background_dark"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hotel_name" />

    <TextView
        android:id="@+id/change_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/white"
        android:paddingRight="10dp"
        android:text="@string/sign_out"
        android:textAlignment="textEnd"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="#FF27AE60"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/restaurant_listView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toEndOf="@+id/restaurant_listView"
        app:layout_constraintTop_toBottomOf="@+id/hotel_name"
        tools:text="@string/sign_out" />


    <Space
        android:id="@+id/space4"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_listView" />

    <ImageButton
        android:id="@+id/cart_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/white"
        android:onClick="goToCart"
        app:layout_constraintBottom_toBottomOf="@+id/hotel_button"
        app:layout_constraintEnd_toStartOf="@+id/account_button"
        app:layout_constraintStart_toEndOf="@+id/hotel_button"
        app:layout_constraintTop_toBottomOf="@+id/space4"
        app:srcCompat="@drawable/ic_cart_icon_dark" />

    <ImageButton
        android:id="@+id/account_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/hotel_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cart_button"
        app:layout_constraintTop_toBottomOf="@+id/space4"
        app:srcCompat="@drawable/ic_account" />


    <ImageButton
        android:id="@+id/hotel_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@android:color/white"
        android:fadingEdge="none"
        android:onClick="goToHotelMenu"
        android:tint="#E6E2E0"
        app:layout_constraintEnd_toStartOf="@+id/cart_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space4"
        app:srcCompat="@drawable/ic_burger" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cart_button"
        app:layout_constraintVertical_bias="0.0"
        tools:context="com.persi.eatery.Register">

        <TextView
            android:id="@+id/Sign_up_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="Change account info"
            android:textAlignment="viewStart"
            android:textColor="?attr/actionModeSplitBackground"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="Change account info" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/hostel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/promt_hostel"
                android:inputType="text"
                android:textColor="@android:color/background_dark" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/room"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/promt_room"
                android:inputType="number"
                android:textColor="@android:color/background_dark" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/promt_phone_number"
                android:inputType="number"
                android:textColor="@android:color/background_dark" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/save_changes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:background="#FF27AE60"
            android:onClick="saveChanges"
            android:text="Save changes"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="Save changes" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>
