<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutx"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.persi.eatery.RestaurantActivity">


    <TextView
        android:id="@+id/hotel_name"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/deliverin_food_to"
        android:textColor="@android:color/background_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/deliverin_food_to" />


    <Space
        android:id="@+id/space3"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/hotel_name"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/name_textview"
        android:layout_width="206dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:text="@string/customer_name"
        android:textColor="@android:color/background_dark"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space3" />

    <Button
        android:id="@+id/change_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/white"
        android:onClick="changeLoginId"
        android:paddingRight="10dp"
        android:text="@string/sign_out"
        android:textAlignment="textEnd"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="#FF27AE60"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/name_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toEndOf="@+id/name_textview"
        app:layout_constraintTop_toBottomOf="@+id/hotel_name"
        tools:text="@string/sign_out" />


    <ImageButton
        android:id="@+id/cart_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/white"
        android:onClick="goToCart"
        app:layout_constraintBottom_toBottomOf="@+id/hotel_button"
        app:layout_constraintEnd_toStartOf="@+id/account_button"
        app:layout_constraintStart_toEndOf="@+id/hotel_button"
        app:layout_constraintTop_toBottomOf="@+id/name_textview"
        app:srcCompat="@drawable/ic_cart_icon_dark" />

    <ImageButton
        android:id="@+id/account_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/white"
        android:onClick="changeUserDetails"
        android:tint="#E6E2E0"
        app:layout_constraintBottom_toBottomOf="@+id/hotel_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cart_button"
        app:layout_constraintTop_toBottomOf="@+id/change_button"
        app:srcCompat="@drawable/ic_account" />


    <ImageButton
        android:id="@+id/hotel_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@android:color/white"
        android:fadingEdge="none"
        app:layout_constraintEnd_toStartOf="@+id/cart_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_textview"
        app:srcCompat="@drawable/ic_burger" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_button"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>
